# podcast-transcriber

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
podcast_transcriber/: __init__.py  __main__.py  audio_downloader.py  collector.py  podcast_infos.py  podcast_scraper.py  scraper.py  transcriber.py  types.py  utils.py
