[tool.poetry]
name = "podcast-transcriber"
version = "0.1.0"
description = ""
authors = ["Hannes"]
readme = "README.md"
packages = [{ include = "podcast_transcriber" }]

[tool.poetry.dependencies]
python = "^3.10"
podcastparser = "^0.6.8"
pydantic = "^1.10.2"
requests = "^2.28.1"
typer = "^0.6.1"
whisper = { git = "https://github.com/openai/whisper.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0.post0"
isort = "^5.10.1"
pyright = "^1.1.274"
ssort = "^0.11.6"

[tool.poetry.scripts]
"podcast-transcriber" = "podcast_transcripts:run"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E501", "E203", "W503"]
exclude = [".archive/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
